# opengl

./: CMakeLists.txt  build.sh  main.cc
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/source/: glad.c
include/: get_shader.h  log_print.h
include/glm/: CTestTestfile.cmake  cmake_install.cmake
include/glm/simd/: common.h  neon.h  platform.h
triangle/: CMakeLists.txt  triangle.cc  triangle.h
triangle/shader/: demo.frag  demo.vert
